# ShamirSeedGuard

./: .replit  Pasted--UTC-Logs-for-shamirseedguard-fmduphvpcdxc66st8czwvz-streamlit-app--1730969287835.txt  Pasted--UTC-Logs-for-shamirseedguard-smpvdtwp73tu3dky5cuoza-streamlit-app--1730975754437.txt  app.py  models.py  pyproject.toml  requirements.txt  shares.db
migrations/: add_time_lock_column.py
secretsharing_fixed/: __init__.py  charset.py  polynomials.py  primes.py
static/js/: script.js
templates/: app.html  index.html
