[project]
name = "repl-nix-shamirseedguard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "secretsharing",
    "sqlalchemy>=2.0.36",
    "cryptography>=43.0.3",
    "qrcode>=8.0",
]

[tool.uv.sources]
secretsharing = { git = "https://github.com/blockstack/secret-sharing.git" }
